<resources>
    <string name="api_endpoint">https://hotel-management-server.fly.dev/</string>
    <string name="api_address_vietnam">https://provinces.open-api.vn/api/</string>
    <string name="sign_in_dialog_retry">Retry</string>
    <string name="sign_in_dialog_register">Register</string>

    <string name="success">Success</string>
    <string name="reservation_success">Reservation success</string>
    <string name="price">Price</string>
    <string name="type_room">Type room</string>
    <string name="type_room_detail">Type room detail</string>
    <string name="view_direction">View direction</string>
    <string name="view_direction_river">River</string>
    <string name="view_direction_city">City</string>
    <string name="preferential_services">Preferential services</string>
    <string name="size">Size</string>
    <string name="adult_capacity">Adult capacity</string>
    <string name="kid_capacity">Kid capacity</string>
    <string name="amenities">Amenities</string>
    <string name="general_amenities">General</string>
    <string name="bathroom_amenities">Bathroom</string>
    <string name="other_amenities">Other</string>
    <string name="account">Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_no_account_question">Don\'t have an account?</string>

    // update profile
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="ward">Ward</string>
    <string name="address">Address</string>

    <string name="upload_image">Upload Image</string>

    <string name="update">Update</string>
    <string name="update_success">Update profile successfully !</string>

    // change password
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="old_password_required">Old password is required !</string>
    <string name="new_password_required">New password is required !</string>
    <string name="change_password_success">Change password successfully !</string>
    <string name="change_password_failed">Change password failed !</string>
    <string name="min_length_password">Password must be at least 6 characters !</string>
    <string name="match_confirm_password">Confirm password must match new password !</string>
    <string name="wrong_old_password">Wrong old password !</string>

    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="sign_in_failed_alert_title">Sign in failed!</string>
    <string name="sign_up_failed_alert_title">Sign up failed!</string>
    <string name="sign_in_failed_alert_message">Email or password is invalid. Please try again or sign up new account.</string>
    <string name="sign_up_failed_alert_message">This email already used!</string>
    <string name="sign_in_success_message">Sign in successfully!</string>
    <string name="sign_up_success_message">Sign up successfully!</string>
    <string name="sign_out_success_message">Sign out successfully!</string>
    <string name="sign_up_have_account_question">Already have an account?</string>
    <string name="profile">Profile</string>
    <string name="reservation">Reservation</string>
    <string name="reserve">Reserve</string>
    <string name="datetime_from">Datetime from</string>
    <string name="date_from">Date from</string>
    <string name="time_from">Time from</string>
    <string name="datetime_to">Datetime to</string>
    <string name="date_to">Date to</string>
    <string name="time_to">Time to</string>
    <string name="number_people">Number people</string>
    <string name="adult_number">Adult number</string>
    <string name="kid_number">Kid number</string>
    <string name="total_price">Total price</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="reservation_history">Reservation history</string>
    <string name="reservation_history_detail">Reservation history detail</string>
    <string name="created_at">Created at</string>
    <string name="room">Room</string>
    <string name="room_number">Room number</string>
    <string name="floor">Floor</string>
    <string name="status">Status</string>
    <string name="status_waiting">Waiting</string>
    <string name="status_open">Open</string>
    <string name="status_in_progress">In progress</string>
    <string name="status_end">End</string>
    <string name="status_cancel">Cancel</string>
    <string name="check_in_at">Check in at</string>
    <string name="checkout_at">Check out at</string>
    <string name="updated_at">Updated at</string>
    <string name="name">Name</string>
    <string name="payment">Payment</string>
    <string name="edit">Edit</string>
    <string name="bank">Bank</string>
    <string name="warning">Warning</string>
    <string name="account_number">Account number</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="contact_us">Contact us</string>

    <string name="require_input_message">This field is required!</string>
    <string name="exceed_capacity_limit_message">Exceed capacity limit!</string>
    <string name="invalid_input">Invalid input!</string>
    <string name="datetime_from_must_less_than_to_message">Datetime from must be less than datetime to!</string>
    <string name="out_of_room_title">Out of room!</string>
    <string name="out_of_room_message">Please select others time or select other type room.</string>
    <string name="warning_payment_message">Please do not change the transfer amount and transfer content while making the transfer transaction.</string>
    <string name="cancel_reservation_alert_title">Are you sure you want to cancel it?</string>
    <string name="cancel_waiting_reservation_alert_message">This action cannot be undo.</string>
    <string name="cancel_open_reservation_alert_message">You have paid for this reservation.</string>
    <string name="cancel_in_progress_reservation_alert_message">You have paid for this reservation and it is in use. If you cancel, we will not refund the amount you have paid.</string>
    <string name="cancel_reservation_success_title">Cancel reservation successful!</string>
    <string name="cancel_open_reservation_success_message">Please contact us to get your deposit refunded.</string>


    <string name="app_name">Hotel HK2T</string>
    <string name="booking_history">Booking history</string>
    <string name="change_password">Change password</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="system_language">System language</string>
    <string name="sign_out">Sign out</string>
    <string name="about_us">About us</string>

    <string name="surname_required">Surname is required !</string>
    <string name="firstname_required">Firstname is required !</string>
    <string name="email_required">Email is required !</string>
    <string name="email_wrong_format">Email is wrong format !</string>
    <string name="password_required">Password is required !</string>
    <string name="password_min_characters">Password must be at least 6 characters !</string>

    <string name="description_hotel">Located right in the heart of Ghenh Rang - Quy Nhon, HK2T Hotel is paradise Resort with beautiful views of the Saigon River. Enjoy a vacation memorable amidst the unique luxurious resort space and classy service and convenient location to explore famous tourist destinations.</string>
    <string name="our_location">Our location</string>
    <string name="maps">Maps</string>
    <string name="hour">Hour</string>
    <string name="personal_information">Personal information</string>

    <string name="capacity">Capacity</string>
    <string name="location">Location</string>
    <string name="person_infor">Personal information</string>
    <string name="booking">Booking</string>

    <string name="reservation_infor">Your reservation information</string>
    <string name="payment_deposit">Payment deposit</string>
    <string name="relation_deposit_price_booking">You pay a deposit of 50% of the total booking price. You will pay the remaining 50% when you arrive at the reception.</string>
    <string name="deposit_note">You can deposit now by scanning the qr code below or you can deposit later but the deposit deadline is before the booking date.</string>

    <string name="adults">adults</string>
    <string name="kids">kids</string>
    <string name="and">and</string>
</resources>