<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hotel.hotel_booking_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_home_to_type_room_detail" app:destination="@+id/nav_type_room_detail"/>
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hotel.hotel_booking_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.hotel.hotel_booking_app.ui.profile.ChangePasswordFragment"
        android:label="@string/password"
        tools:layout="@layout/fragment_change_password"/>

    <fragment
        android:id="@+id/nav_reservation_history"
        android:name="com.hotel.hotel_booking_app.ui.reservation_history.ReservationHistoryFragment"
        android:label="@string/reservation_history"
        tools:layout="@layout/fragment_reservation_history"/>

    <fragment
        android:id="@+id/nav_reservation_history_detail"
        android:name="com.hotel.hotel_booking_app.ui.reservation_history.ReservationHistoryDetailFragment"
        android:label="@string/reservation_history_detail"
        tools:layout="@layout/fragment_reservation_history_detail"/>

    <fragment
        android:id="@+id/nav_type_room_detail"
        android:name="com.hotel.hotel_booking_app.ui.type_room_detail.TypeRoomDetailFragment"
        android:label="@string/type_room_detail"
        tools:layout="@layout/fragment_type_room_detail"/>
    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.hotel.hotel_booking_app.ui.reservation.ReservationFragment"
        android:label="@string/reservation"
        tools:layout="@layout/fragment_reservation"/>
    <fragment
        android:id="@+id/nav_reservation_success"
        android:name="com.hotel.hotel_booking_app.ui.reservation.ReservationSuccessFragment"
        android:label="@string/reservation_success"
        tools:layout="@layout/fragment_reservation_success"/>
    <fragment
        android:id="@+id/nav_reservation_payment"
        android:name="com.hotel.hotel_booking_app.ui.reservation.ReservationPaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_reservation_payment"/>

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.hotel.hotel_booking_app.ui.setting.SettingFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_setting"/>

    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.hotel.hotel_booking_app.ui.sign_in.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_nav_sign_in_to_nav_sign_up"
            app:destination="@id/nav_sign_up" />
    </fragment>

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.hotel.hotel_booking_app.ui.sign_up.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_nav_sign_up_to_nav_sign_in"
            app:destination="@id/nav_sign_in" />
    </fragment>
</navigation>