<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.reservation.ReservationPaymentFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginHorizontal="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/emailInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp"
        >
        <ImageView
            android:id="@+id/image_reservation_payment_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/qr_code_scanner"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/text_reservation_payment_bank"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:gravity="center"
        style="@style/TextAppearance.Material3.BodyLarge"
        />
    <TextView
        android:id="@+id/text_reservation_payment_account_number"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_number"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/text_reservation_payment_total_price"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/text_reservation_payment_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:text="@string/warning_payment_message"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

    </LinearLayout>
</LinearLayout>